Modified pvagw.conf - still no access control.

--- a/boot/nuc-02/pvagw/pvagw.conf
+++ b/boot/nuc-02/pvagw/pvagw.conf
@@ -1,8 +1,8 @@
 /* Example pvagw configuration
  *
- * GW Server listens on: 1.2.3.4/24:5076 and attempts to bind 5075
- * GW Client searches to: 5.6.7.8/24:5076
- * An additional server listening on 5.6.7.8 serves only gateway
+ * GW Server listens on: 130.238.200.140/24:5076 and attempts to bind 5075
+ * GW Client searches to: 192.168.10.255/24:5076
+ * An additional server listening on 192.168.10.116 serves only gateway
  * status PVs.
  */
 {
@@ -10,7 +10,7 @@
     "readOnly":true,
     "clients":[
         {
-            "name":"theclient",
+            "name":"client192_168_10",
             "provider":"pva",
             "addrlist":"192.168.10.255",
             "autoaddrlist":false,
@@ -20,14 +20,14 @@
     ],
     "servers":[
         {
-            "name":"theserver",
-            "clients":["theclient"],
+            "name":"server130_238_200",
+            "clients":["client192_168_10"],
             "interface":["130.238.200.140"],
             "addrlist":"130.238.200.140",
             "autoaddrlist":false,
             "serverport":5075,
             "bcastport":5076,
-            "statusprefix":"sts:"
+            "statusprefix":"Ctrl-p4pgw:"
             /* "access":"some.acf", */
             /* "pvlist":"some.pvlist", */
         },
@@ -40,7 +40,7 @@
             "autoaddrlist":false,
             "serverport":5075,
             "bcastport":5076,
-            "statusprefix":"Ctrl-p4p:"
+            "statusprefix":"Ctrl-p4pgw:"
         }
     ]
 }
